third_party/rust/bitflags/v1/crate/tests/compile-pass/repr/c.rs
use bitflags::bitflags;

bitflags! {
    #[repr(C)]
    struct Flags: u32 {
        const A = 0b00000001;
    }
}

fn main() {}
